package Interfaz;

//qph clase reservada para hacer una interfaz gráfica (proyectado a futuro)
public class Ventana {


}
