package Utils;

//qph esta clase tiene que poder escribir los valores de los renglones de datos en un archivo de texto
public final class EscritorDatos {

	private EscritorDatos(){

	}


}
